DI-5246 Removes position absolute from header scss to fix alignment issue with responsive menu button

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -62,7 +62,6 @@
 .nhsuk-header {
     &.nhsuk-header--transactional {
         .nhsuk-header__menu-toggle {
-            position: absolute;
             @include mq($until: tablet) {
                 top: auto;
             }
